--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,10 @@
 .porfolio-grid {
   display: flex;
 }
+.porfolio-grid card {
+  width: 50px;
+  height: 50px;
+}
 
 /* Contact */
 .contact-body {
